Add CMake flag for disabling the unit tests
fixes #10660

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ option(ICINGA2_WITH_LIVESTATUS "Build the Livestatus module" ON)
 option(ICINGA2_WITH_NOTIFICATION "Build the notification module" ON)
 option(ICINGA2_WITH_PERFDATA "Build the perfdata module" ON)
 option(ICINGA2_WITH_STUDIO "Build the Icinga Studio application" OFF)
+option(ICINGA2_WITH_TESTS "Run unit tests" ON)
 
 file(STRINGS icinga2.spec VERSION_LINE REGEX "^Version: ")
 string(REPLACE "Version: " "" ICINGA2_VERSION ${VERSION_LINE})
@@ -241,12 +242,15 @@ add_subdirectory(icinga-app)
 add_subdirectory(etc)
 add_subdirectory(itl)
 add_subdirectory(doc)
-add_subdirectory(test)
 add_subdirectory(agent)
 add_subdirectory(plugins)
 
 if(ICINGA2_WITH_STUDIO)
   add_subdirectory(icinga-studio)
+endif()
+
+if(ICINGA2_WITH_TESTS)
+  add_subdirectory(test)
 endif()
 
 set(CPACK_PACKAGE_NAME "Icinga2")
