Allow overwriting expected answer of dns check

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1519,7 +1519,10 @@ object CheckCommand "dns" {
 		}
 		"-a_old" = {
 			key = "-a"
-			value ="$dns_expected_answer$"
+			set_if = {{
+				return bool(macro("$dns_expected_answer$"))
+			}}
+			value = "$dns_expected_answer$"
 		}
 		"-A" = {
 			set_if = "$dns_authoritative$"
