Add timeout to snmpv3 check
Signed-off-by: Jean Flach <jean-marcel.flach@netways.de>

fixes #10920

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1163,12 +1163,14 @@ object CheckCommand "snmpv3" {
 				value = "$snmpv3_label$"
 				description = "Prefix label for output from plugin"
 		}
+		"-t" = "$snmpv3_timeout$"
 	}
 
 	vars.snmpv3_address = "$check_address$"
 	vars.snmpv3_auth_alg = "SHA"
 	vars.snmpv3_priv_alg = "AES"
 	vars.snmpv3_seclevel = "authPriv"
+	vars.snmpv3_timeout = "10"
 }
 
 object CheckCommand "snmp-uptime" {
