Add check_iostat to ITL
fixes #10777

Signed-off-by: Jean Flach <jean-marcel.flach@netways.de>

--- a/itl/plugins-contrib.d/operating-system.conf
+++ b/itl/plugins-contrib.d/operating-system.conf
@@ -126,3 +126,30 @@ object CheckCommand "yum" {
 
 	timeout = 5m
 }
+
+object CheckCommand "iostat" {
+	import "plugin-check-command"
+	command = [ PluginContribDir + "/check_iostat" ]
+	arguments = {
+		"-d" = {
+			value = "$iostat_disk$"
+			description = "Device to check without path. e.g. sda"
+		}
+		"-w" = {
+			value ="$iostat_wtps$,$iostat_wread$,$iostat_wwrite$"
+			description = "warning threshold for tps, KB_read/s and KB_written/s"
+		}
+		"-c" = {
+			value ="$iostat_ctps$,$iostat_cread$,$iostat_cwrite$"
+			description = "warning threshold for tps, KB_read/s and KB_written/s"
+		}
+	}
+
+	vars.iostat_disk = "sda"
+	vars.iostat_wtps = 100
+	vars.iostat_wread = 100
+	vars.iostat_wwrite = 100
+	vars.iostat_ctps = 200
+	vars.iostat_cread = 200
+	vars.iostat_cwrite = 200
+}
