Fix that the hpasm CheckCommand is using the PluginDir constant
fixes #10780

--- a/itl/plugins-contrib.d/hardware.conf
+++ b/itl/plugins-contrib.d/hardware.conf
@@ -2,7 +2,7 @@ object CheckCommand "hpasm" {
 	import "plugin-check-command"
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_hpasm" ]
+	command = [ PluginContribDir + "/check_hpasm" ]
 
 	arguments = {
 		"--hostname" = {
@@ -54,7 +54,7 @@ object CheckCommand "hpasm" {
 			value = "$hpasm_authpassword$"
 			description = "The authentication password for SNMPv3"
 		}
-		"--authprotocol" = {		
+		"--authprotocol" = {
 			value = "$hpasm_authprotocol$"
 			description = "The authentication protocol for SNMPv3 (md5|sha)"
 		}
