Added exclude parameter in disk-windows CheckCommand
Added missing command parameter in definition for disk-windows CheckCommand
in order to be able to exclude certain drives from being checked.
This parameter was addressed in feature #9201
Further details can be found in feature #10787

Signed-off-by: Jean Flach <jean-marcel.flach@netways.de>

fixes #10787

--- a/itl/command-plugins-windows.conf
+++ b/itl/command-plugins-windows.conf
@@ -40,6 +40,10 @@ object CheckCommand "disk-windows" {
 			value = "$disk_win_unit$"
 			description = "Use this unit to display disk space"
 		}
+		"-x" = {
+			value = "$disk_win_exclude$"
+			description = "Exclude these drives from check"
+		}
 	}
 	
 	vars.disk_win_unit = "mb"
