--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -363,7 +363,8 @@ object CheckCommand "mongodb" {
 			description = "Connect using SSL"
 		}
 		"--replicaset" = {
-			set_if = "$mongodb_replicaset$"
+			value = "$mongodb_replicaset$"
+			set_if = "$mongodb_replcheck$"
 			description = "Connect to replicaset"
 		}
 		"--all-databases" = {
