Add SSL support to MySQL connections via IDO

--- a/test/jenkins/files/configs/ido_checkresults.conf
+++ b/test/jenkins/files/configs/ido_checkresults.conf
@@ -9,6 +9,11 @@ object IdoMysqlConnection "ido-mysql" {
   password = "icinga",
   host = "localhost",
   database = "icinga",
+  ssl_key = "",
+  ssl_cert = "",
+  ssl_ca = "",
+  ssl_capath = "",
+  ssl_cipher = "",
   categories = (DbCatCheck | DbCatConfig | DbCatState | DbCatAcknowledgement |
                 DbCatComment | DbCatDowntime | DbCatEventHandler | DbCatExternalCommand | DbCatFlapping |
                 DbCatLog | DbCatNotification | DbCatProgramStatus | DbCatRetention | DbCatStateHistory)
