--- a/etc/icinga2/features-available/ido-mysql.conf
+++ b/etc/icinga2/features-available/ido-mysql.conf
@@ -10,4 +10,10 @@ object IdoMysqlConnection "ido-mysql" {
   //password = "icinga"
   //host = "localhost"
   //database = "icinga"
+
+  //ssl_key = ""
+  //ssl_cert = ""
+  //ssl_ca = ""
+  //ssl_capath = ""
+  //ssl_cipher = ""
 }
