Add -f option to check_disk CheckCommand
fixes #11138

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -770,6 +770,11 @@ object CheckCommand "disk" {
 			description = "Display only devices/mountpoints with errors"
 		}
 
+		"-f" = {
+			set_if = "$disk_ignore_reserved$"
+			description = "Don't account root-reserved blocks into freespace in perfdata"
+		}
+
 		"-g" = {
 			value = "$disk_group$"
 			description = "Group paths. Thresholds apply to (free-)space of all partitions together"
