ITL: Add query option to check_postgres
There were "query", "valtype" and "reverse" options missing
for "custom_query" action type in check_postgres plugin.

fixes #11205

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -296,6 +296,18 @@ object CheckCommand "postgres" {
 			value = "$postgres_action$"
 			description = "determines the test executed"
 		}
+		"--query" = {
+			value = "$postgres_query$"
+			description = "query for custom_query action"
+		}
+		"--valtype" = {
+			value = "$postgres_valtype$"
+			description = "determines the result type for custom_query action"
+		}
+		"--reverse" = {
+			set_if = "$postgres_reverse$"
+			description = "reverses warning and critical for custom_query action"
+		}
 	}
 
 	vars.postgres_host = "$check_address$"
