--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1289,6 +1289,7 @@ object CheckCommand "snmp" {
 		"-u" = "$snmp_units$"
 		"-t" = "$snmp_timeout$"
 		"-p" = "$snmp_port$"
+		"-e" = "$snmp_retries$"		
 		"--invert-search" = {
 			set_if = "$snmp_invert_search$"
 			description = "Invert search result and return CRITICAL if found"
