Add uninstall to the chocolatey package
refs #11369

--- a/icinga2.nuspec
+++ b/icinga2.nuspec
@@ -22,5 +22,6 @@
   </metadata>
   <files>
     <file src="tools\chocolateyInstall.ps1" target="tools" />
+    <file src="tools\chocolateyUninstall.ps1" target="tools" />
   </files>
 </package>
