ITL: Add additional http check command parameters for SSL version enforcement
refs #10358

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -334,11 +334,32 @@ object CheckCommand "http" {
 		"-S1" = {
 			set_if = "$http_ssl_force_tlsv1$"
 		}
+		"-S1.1" = {
+			set_if = "$http_ssl_force_tlsv1_1$"
+		}
+		"-S1.2" = {
+			set_if = "$http_ssl_force_tlsv1_2$"
+		}
 		"-S2" = {
 			set_if = "$http_ssl_force_sslv2$"
 		}
 		"-S3" = {
 			set_if = "$http_ssl_force_sslv3$"
+		}
+		"-S1+" = {
+			set_if = "$http_ssl_force_tlsv1_or_higher$"
+		}
+		"-S1.1+" = {
+			set_if = "$http_ssl_force_tlsv1_1_or_higher$"
+		}
+		"-S1.2+" = {
+			set_if = "$http_ssl_force_tlsv1_2_or_higher$"
+		}
+		"-S2+" = {
+			set_if = "$http_ssl_force_sslv2_or_higher$"
+		}
+		"-S3+" = {
+			set_if = "$http_ssl_force_sslv3_or_higher$"
 		}
 		"--sni" = {
 			set_if = "$http_sni$"
