ITL: Missing documentation for nwc_health "mode" parameter
fixes #11107

--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -509,7 +509,7 @@ object CheckCommand "nwc_health" {
 		}
 		"--mode" = {
 			value = "$nwc_health_mode$"
-			description = "A keyword which tells the plugin what to do"
+			description = "Which mode should be executed. A list of all available modes can be found in the plugin documentation"
 		}
 		"--name" = {
 			value = "$nwc_health_name$"
