Add --units, --rate and --rate-multiplier support for the snmpv3 check command
fixes #11194

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1198,6 +1198,12 @@ object CheckCommand "snmpv3" {
 				value = "$snmpv3_label$"
 				description = "Prefix label for output from plugin"
 		}
+		"-u" = "$snmpv3_units$"
+		"--rate-multiplier" = "$snmpv3_rate_multiplier$"
+		"--rate" = {
+			set_if = "$snmpv3_rate$"
+			description = "Enable rate calculation"
+		}
 		"-t" = "$snmpv3_timeout$"
 	}
 
