Add --method parameter for check_{oracle,mysql,mssql}_health CheckCommands
fixes #11098

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -59,6 +59,10 @@ object CheckCommand "mssql_health" {
 			value = "$mssql_health_mode$"
 			description = "the mode of the plugin"
 		}
+		"--method" = {
+			value = "$mssql_health_method$"
+			description = "how the plugin should connect to the database (dbi for using DBD::Sybase (default), sqlrelay for the SQLRelay proxy)"
+		}
 		"--name" = {
 			value = "$mssql_health_name$"
 			description = "the name of the database etc depending on the mode"
@@ -133,6 +137,10 @@ object CheckCommand "mysql_health" {
 			value = "$mysql_health_mode$"
 			description = "the mode of the plugin"
 		}
+		"--method" = {
+			value = "$mysql_health_method$"
+			description = "how the plugin should connect to the database (dbi for using DBD::mysql (default), mysql for using the mysql-Tool)"
+		}
 		"--name" = {
 			value = "$mysql_health_name$"
 			description = "currently only used for sql statements"
@@ -183,6 +191,10 @@ object CheckCommand "oracle_health" {
 		"--mode" = {
 			value = "$oracle_health_mode$"
 			description = "the mode of the plugin"
+		}
+		"--method" = {
+			value = "$oracle_health_method$"
+			description = "how the plugin should connect to the database (dbi for using DBD::Oracle (default), sqlplus for using the sqlplus-Tool)"
 		}
 		"--name" = {
 			value = "$oracle_health_name$"
