--- a/icinga-installer/CMakeLists.txt
+++ b/icinga-installer/CMakeLists.txt
@@ -15,10 +15,15 @@
 # along with this program; if not, write to the Free Software Foundation
 # Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
-add_executable(icinga-installer icinga-installer.cpp)
+foreach(flag_var
+        CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS_DEBUG CMAKE_CXX_FLAGS_RELEASE
+        CMAKE_CXX_FLAGS_MINSIZEREL CMAKE_CXX_FLAGS_RELWITHDEBINFO)
+   if(${flag_var} MATCHES "/MD")
+      string(REGEX REPLACE "/MD" "/MT" ${flag_var} "${${flag_var}}")
+   endif(${flag_var} MATCHES "/MD")
+endforeach(flag_var)
 
-include_directories(${Boost_INCLUDE_DIRS})
-target_link_libraries(icinga-installer ${Boost_LIBRARIES} base config cli)
+add_executable(icinga-installer icinga-installer.cpp)
 
 set_target_properties (
   icinga-installer PROPERTIES
@@ -26,6 +31,11 @@ set_target_properties (
   OUTPUT_NAME icinga2-installer
   LINK_FLAGS "/SUBSYSTEM:WINDOWS"
 )
+
+target_link_libraries(icinga-installer shlwapi)
+
+get_property(ICINGA2_INSTALLER_TARGET TARGET icinga-installer PROPERTY LOCATION_Release)
+configure_file(icinga2.wixpatch.cmake ${CMAKE_CURRENT_BINARY_DIR}/icinga2.wixpatch @ONLY)
 
 set(InstallPath "${CMAKE_INSTALL_SBINDIR}")
 
