Add enable_ssl switch to avoid unnecessary processing if SSL is not used

--- a/etc/icinga2/features-available/ido-mysql.conf
+++ b/etc/icinga2/features-available/ido-mysql.conf
@@ -11,6 +11,7 @@ object IdoMysqlConnection "ido-mysql" {
   //host = "localhost"
   //database = "icinga"
 
+  //enable_ssl = false
   //ssl_key = ""
   //ssl_cert = ""
   //ssl_ca = ""
