--- a/test/jenkins/files/configs/ido_checkresults.conf
+++ b/test/jenkins/files/configs/ido_checkresults.conf
@@ -9,6 +9,7 @@ object IdoMysqlConnection "ido-mysql" {
   password = "icinga",
   host = "localhost",
   database = "icinga",
+  enable_ssl = false,
   ssl_key = "",
   ssl_cert = "",
   ssl_ca = "",
