Docs: Add SELinux chapter
fixes #10553

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,8 +23,9 @@ pages:
 - [19-library-reference.md, Library Reference]
 - [20-script-debugger.md, Script Debugger]
 - [21-development.md, Development]
-- [22-migrating-from-icinga-1x.md, Migrating from Icinga 1.x]
-- [23-appendix.md, Appendix]
+- [22-selinux.md, SELinux]
+- [23-migrating-from-icinga-1x.md, Migrating from Icinga 1.x]
+- [24-appendix.md, Appendix]
 theme: readthedocs
 markdown_extensions: [smarty]
 extra_javascript: [scroll.js]
