--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1108,7 +1108,7 @@ object CheckCommand "disk" {
 	vars.disk_inode_wfree = "20%"
 	vars.disk_inode_cfree = "10%"
 	vars.disk_megabytes = true
-	vars.disk_exclude_type = ["none", "tmpfs", "sysfs", "proc", "devtmpfs", "devfs", "mtmfs"]
+	vars.disk_exclude_type = [ "none", "tmpfs", "sysfs", "proc", "devtmpfs", "devfs", "mtmfs", "tracefs", "cgroup" ]
 }
 
 object CheckCommand "disk_smb" {
