Revert "Implement unit tests for the time period parser"
This reverts commit 1246d7dda334859ee136198b8285f5f4f9504b59.

refs #11146

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,8 +22,8 @@ set(base_test_SOURCES
   base-json.cpp base-match.cpp base-netstring.cpp base-object.cpp
   base-serialize.cpp base-shellescape.cpp base-stacktrace.cpp
   base-stream.cpp base-string.cpp base-timer.cpp base-type.cpp
-  base-value.cpp config-ops.cpp icinga-legacytimeperiod.cpp
-  icinga-macros.cpp icinga-perfdata.cpp test.cpp
+  base-value.cpp config-ops.cpp icinga-macros.cpp
+  icinga-perfdata.cpp test.cpp 
   remote-base64.cpp remote-url.cpp
 )
 
@@ -98,7 +98,6 @@ add_boost_test(base
         config_ops/simple
         config_ops/advanced
         icinga_macros/simple
-        icinga_legacytimeperiod/simple
         icinga_perfdata/empty
         icinga_perfdata/simple
         icinga_perfdata/quotes
