Updated command definition and documentation for check_esxi_hardware (added CIM port parameter)

--- a/itl/plugins-contrib.d/virtualization.conf
+++ b/itl/plugins-contrib.d/virtualization.conf
@@ -35,6 +35,10 @@ object CheckCommand "esxi_hardware" {
 			value = "$esxi_hardware_pass$"
 			description = "password"
 		}
+		"-C" = {
+			value = "$esxi_hardware_port$"
+			description = "cim port"
+		}
 		"-V" = {
 			value = "$esxi_hardware_vendor$"
 			description = "Vendor code: auto, dell, hp, ibm, intel, or unknown"
@@ -74,6 +78,7 @@ object CheckCommand "esxi_hardware" {
 	}
 
 	vars.esxi_hardware_host = "$address$"
+	vars.esxi_hardware_port = "5989"
 	vars.esxi_hardware_perfdata = false
 	vars.esxi_hardware_nopower = false
 	vars.esxi_hardware_novolts = false
