Fix incorrect variable name in the hosts.conf example config for Windows
fixes #11894

--- a/etc/icinga2/conf.d/win32/hosts.conf
+++ b/etc/icinga2/conf.d/win32/hosts.conf
@@ -31,7 +31,7 @@ object Host NodeName {
     /* No parameters. */
   }
   vars.disks["disk C:"] = {
-    disk_partition = "C:"
+    disk_win_path = "C:"
   }
 
   /* Define notification mail attributes for notification apply rules in `notifications.conf`. */
