ITL: Add option for ifName to Manubulon CheckCommand 'snmp_interface'
Recent Net-SNMP's snmpd daemon has changed behavior returning detailed
information about the network interfaces in the IF-MIB::ifDescr MIB.

There is a patch out there that is working around the issue (see also
https://bugs.debian.org/812837) by providing the behaviour via '-N'.

This path provides a way to make use of this workaround.

fixes #11931

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -187,6 +187,9 @@ object CheckCommand "snmp-interface" {
 		"-u" = {
 			set_if = "$snmp_interface_warncrit_percent$"
 		}
+		"-N" = {
+			set_if = "$snmp_interface_ifname$"
+		}
 		"-f" = {
 			set_if = "$snmp_perf$"
 		}
@@ -203,6 +206,7 @@ object CheckCommand "snmp-interface" {
 	vars.snmp_interface_noregexp = false
 	vars.snmp_interface_delta = 300
 	vars.snmp_interface_warncrit_percent = false
+	vars.snmp_interface_ifname = false
 	vars.snmp_warn = "300,400"
 	vars.snmp_crit = "0,600"
 	vars.snmp_perf = true
