Add check command for plugin check_apache_status
fixes #11970

Signed-off-by: Gunnar Beutner <gunnar.beutner@netways.de>

--- a/itl/plugins-contrib.d/web.conf
+++ b/itl/plugins-contrib.d/web.conf
@@ -331,3 +331,45 @@ object CheckCommand "nginx_status" {
 		vars.nginx_status_critical = "20000,200,300"
 		vars.nginx_status_timeout = 15
 }
+
+object CheckCommand "apache-status" {
+	import "plugin-check-command"
+	import "ipv4-or-ipv6"
+
+	command = [ PluginContribDir + "/check_apache_status.pl" ]
+
+	arguments = {
+		"-H" = {
+			value = "$apache_status_address$"
+			description = "name or IP address of host to check"
+		}
+		"-p" = {
+			value = "$apache_status_port$"
+			description = "the http port"
+		}
+		"-s" = {
+			set_if = "$apache_status_ssl$"
+			description = "Wether we should use HTTPS instead of HTTP"
+		}
+		"-u" = {
+			value = "$apache_status_uri$"
+			description = "Specific URL to use, instead of the default 'http://<apache_status_address>/server-status'"
+		}
+		"-w" = {
+			value = "$apache_status_warning$"
+			description = "number of open slots, busy workers and idle workers that will cause a WARNING"
+		}
+		"-c" = {
+			value = "$apache_status_critical$"
+			description = "number of open slots, busy workers and idle workers that will cause a CRITICAL"
+		}
+		"-t" = {
+			value = "$apache_status_timeout$"
+			description = "timeout in seconds"
+		}
+	}
+
+	vars.apache_status_address = "$check_address$"
+	vars.apache_status_ssl = false
+}
+
