Fix spelling mistake in the ITL
refs #12006

--- a/itl/plugins-contrib.d/network-services.conf
+++ b/itl/plugins-contrib.d/network-services.conf
@@ -54,7 +54,7 @@ object CheckCommand "rbl" {
 			description = "Number of blacklisting servers for a critical."
 		}
 		"-t" = {
-			vlaue = "$rbl_timeout$"
+			value = "$rbl_timeout$"
 			description = "Seconds before plugin times out (default: 15)."
 		}
 	}
