ITL: Add iftraffic64 and fix iftraffic CheckCommand plugin path
fixes #12135

--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -296,7 +296,7 @@ object CheckCommand "iftraffic" {
 	import "plugin-check-command"
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_iftraffic64.pl"]
+	command = [ PluginContribDir + "/check_iftraffic.pl"]
 
 	arguments = {
 		"-H" = {
@@ -339,6 +339,55 @@ object CheckCommand "iftraffic" {
 	vars.iftraffic_address = "$check_address$"
 	vars.iftraffic_warn = "85%"
 	vars.iftraffic_crit = "98%"
+}
+
+object CheckCommand "iftraffic64" {
+	import "plugin-check-command"
+	import "ipv4-or-ipv6"
+
+	command = [ PluginContribDir + "/check_iftraffic64.pl"]
+
+	arguments = {
+		"-H" = {
+			value = "$iftraffic64_address$"
+			description = "Check interface on the indicated host."
+			required = true
+		}
+		"-C" = {
+			value = "$iftraffic64_community$"
+			description = "SNMP community. Defaults to 'public' if omitted."
+		}
+		"-i" = {
+			value = "$iftraffic64_interface$"
+			description = "Interface name."
+			required = true
+		}
+		"-b" = {
+			value = "$iftraffic64_bandwidth$"
+			description = "Interface maximum speed in kilo/mega/giga/bits per second."
+			required = true
+		}
+		"-u" = {
+			value = "$iftraffic64_units$"
+			description = "g=gigabits/s,m=megabits/s,k=kilobits/s,b=bits/s."
+		}
+		"-w" = {
+			value = "$iftraffic64_warn$"
+			description = "% of bandwidth usage necessary to result in warning status (default: 85%)"
+		}
+		"-c" = {
+			value = "$iftraffic64_crit$"
+			description = "% of bandwidth usage necessary to result in critical status (default: 98%)"
+		}
+		"-M" = {
+			value = "$iftraffic64_max_counter$"
+			description = "Max counter value of net devices in kilo/mega/giga/bytes."
+		}
+	}
+
+	vars.iftraffic64_address = "$check_address$"
+	vars.iftraffic64_warn = "85"
+	vars.iftraffic64_crit = "98"
 }
 
 object CheckCommand "interfaces" {
