ITL: Fix thresholds and descriptions for iftraffic{,64}
refs #12135

--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -324,11 +324,11 @@ object CheckCommand "iftraffic" {
 		}
 		"-w" = {
 			value = "$iftraffic_warn$"
-			description = "% of bandwidth usage necessary to result in warning status (default: 85%)"
+			description = "% of bandwidth usage necessary to result in warning status (default: 85)"
 		}
 		"-c" = {
 			value = "$iftraffic_crit$"
-			description = "% of bandwidth usage necessary to result in critical status (default: 98%)"
+			description = "% of bandwidth usage necessary to result in critical status (default: 98)"
 		}
 		"-M" = {
 			value = "$iftraffic_max_counter$"
@@ -337,8 +337,8 @@ object CheckCommand "iftraffic" {
 	}
 
 	vars.iftraffic_address = "$check_address$"
-	vars.iftraffic_warn = "85%"
-	vars.iftraffic_crit = "98%"
+	vars.iftraffic_warn = "85"
+	vars.iftraffic_crit = "98"
 }
 
 object CheckCommand "iftraffic64" {
@@ -373,11 +373,11 @@ object CheckCommand "iftraffic64" {
 		}
 		"-w" = {
 			value = "$iftraffic64_warn$"
-			description = "% of bandwidth usage necessary to result in warning status (default: 85%)"
+			description = "% of bandwidth usage necessary to result in warning status (default: 85)"
 		}
 		"-c" = {
 			value = "$iftraffic64_crit$"
-			description = "% of bandwidth usage necessary to result in critical status (default: 98%)"
+			description = "% of bandwidth usage necessary to result in critical status (default: 98)"
 		}
 		"-M" = {
 			value = "$iftraffic64_max_counter$"
