Add support for "-A" command line switch to CheckCommand "snmp-process"
Support for "-A" command line switch to CheckCommand "snmp-process" added in
command-plugins-manubulon.conf. Further details can be found in issue #12189.

fixes #12189

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -231,11 +231,15 @@ object CheckCommand "snmp-process" {
 		"-F" = {
 			set_if = "$snmp_perf$"
 		}
+		"-A" = {
+			set_if = "$snmp_process_use_params$"
+		}
 	}
 
 	vars.snmp_process_name = ".*"
 	vars.snmp_warn = 0
 	vars.snmp_crit = 0
 	vars.snmp_perf = true
+	vars.snmp_process_use_params = false
 }
 
