--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -133,6 +133,14 @@ object CheckCommand "mysql_health" {
 			value = "$mysql_health_critical$"
 			description = "the critical range"
 		}
+		"--warningx" = {
+			value = "$mysql_health_warningx$"
+			description = "The extended warning thresholds"
+		}
+		"--criticalx" = {
+			value = "$mysql_health_criticalx$"
+			description = "The extended critical thresholds"
+		}
 		"--mode" = {
 			value = "$mysql_health_mode$"
 			description = "the mode of the plugin"
@@ -141,13 +149,33 @@ object CheckCommand "mysql_health" {
 			value = "$mysql_health_method$"
 			description = "how the plugin should connect to the database (dbi for using DBD::mysql (default), mysql for using the mysql-Tool)"
 		}
+		"--commit" = {
+			value = "$mysql_health_commit$"
+			description = "turns on autocommit for the dbd::* module"
+		}
+		"--notemp" = {
+			value = "$mysql_health_notemp$"
+			description = "Ignore temporary databases/tablespaces"
+		}
+		"--nooffline" = {
+			value = "$mysql_health_nooffline$"
+			description = "skip the offline databases"
+		}
+		"--regexp" = {
+			value = "$mysql_health_regexp$"
+			description = " Parameter name/name2/name3 will be interpreted as (perl) regular expression."
+		}
 		"--name" = {
 			value = "$mysql_health_name$"
-			description = "currently only used for sql statements"
+			description = "The name of a specific component to check"
 		}
 		"--name2" = {
 			value = "$mysql_health_name2$"
-			description = "if name is a sql statement, name2 can be used to appear in the output and the performance data"
+			description = "The secondary name of a component"
+		}
+		"--name3" = {
+			value = "$mysql_health_name3$"
+			description = "The tertiary name of a component"
 		}
 		"--units" = {
 			value = "$mysql_health_units$"
@@ -156,6 +184,62 @@ object CheckCommand "mysql_health" {
 		"--labelformat" = {
 			value = "$mysql_health_labelformat$"
 			description = "one of pnp4nagios (which is the default) or groundwork"
+		}
+		"--extra-opts" = {
+			value = "$mysql_health_extraopts$"
+			description = "Read command line arguments from an external file."
+		}
+		"--blacklist" = {
+			value = "$mysql_health_blacklist$"
+			description = "Blacklist some (missing/failed) components"
+		}
+		"--mitigation" = {
+			value = "$mysql_health_mitigation$"
+			description = "The parameter allows you to change a critical error to a warning."
+		}
+		"--lookback" = {
+			value = "$mysql_health_lookback$"
+			description = "The amount of time you want to look back when calculating average rates."
+		}
+		"--environment" = {
+			value = "$mysql_health_environment$"
+			description = "Add a variable to the plugin's environment."
+		}
+		"--morphmessage" = {
+			value = "$mysql_health_morphmessage$"
+			description = "Modify the final output message."
+		}
+		"--morphperfdata" = {
+			value = "$mysql_health_morphperfdata$"
+			description = "The parameter allows you to change performance data labels."
+		}
+		"--selectedperfdata" = {
+			value = "$mysql_health_selectedperfdata$"
+			description = "The parameter allows you to limit the list of performance data."
+		}
+		"--report" = {
+			value = "$mysql_health_report$"
+			description = "Can be used to shorten the output."
+		}
+		"--multiline" = {
+			value = "$mysql_health_multiline$"
+			description = "Multiline output."
+		}
+		"--negate" = {
+			value = "$mysql_health_negate$"
+			description = "Emulate the negate plugin. --negate warning=critical --negate unknown=critical."
+		}
+		"--with-mymodules-dyn-dir" = {
+			value = "$mysql_health_withmymodulesdyndir$"
+			description = "Add-on modules for the my-modes will be searched in this directory."
+		}
+		"--statefilesdir" = {
+			value = "$mysql_health_statefilesdir$"
+			description = "An alternate directory where the plugin can save files."
+		}
+		"--isvalidtime" = {
+			value = "$mysql_health_isvalidtime$"
+			description = "Signals the plugin to return OK if now is not a valid check time."
 		}
 	}
 
