Add an option to include the Msi function or not when compiling.
refs #12128

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ option(ICINGA2_WITH_REDIS "Build the redis module" ON)
 option(ICINGA2_WITH_STUDIO "Build the Icinga Studio application" OFF)
 option(ICINGA2_WITH_TESTS "Run unit tests" ON)
 option(ICINGA2_WITH_CLRCHECKTASK "Allow loading .Net code under Windows" ON)
+option(ICINGA2_WITH_MSI_FUNCTION "Msi headers and functions" ON)
 
 file(STRINGS icinga2.spec VERSION_LINE REGEX "^Version: ")
 string(REPLACE "Version: " "" ICINGA2_VERSION ${VERSION_LINE})
@@ -98,6 +99,9 @@ endif()
 if(WIN32)
   set(Boost_USE_STATIC_LIBS ON)
   add_definitions(-DBOOST_ALL_NO_LIB)
+  if(ICINGA2_WITH_MSI_FUNCTION)
+    add_definitions(-DICINGA2_WITH_MSI_FUNCTION)
+  endif()
   add_definitions(/bigobj)
 endif()
 
