snmp: added the "-e" parameter to allow setting retries

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1310,6 +1310,7 @@ object CheckCommand "snmp" {
 		"-u" = "$snmp_units$"
 		"-t" = "$snmp_timeout$"
 		"-p" = "$snmp_port$"
+		"-e" = "$snmp_retries$"
 		"--invert-search" = {
 			set_if = "$snmp_invert_search$"
 			description = "Invert search result and return CRITICAL if found"
